[package]
name = "toku_client"
version = "0.0.1"
authors = ["Helselia Inc."]
edition = "2018"

[dependencies]
toku_protocol = { path = "../toku_protocol" }
toku_connection = { path = "../toku_connection" }
failure = "0.1"
log = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-core", "tcp"] }
tokio-util = { version = "0.2", features = ["codec"]}
bytesize = "1.0.0"
