[package]
name = "toku_connection"
version = "0.2.0"
authors = ["Helselia Inc."]
edition = "2018"
description = "RPC Transport Layer Connection"
license = "MIT"

[dependencies]
failure = "0.1"
log = "0.4"
toku_protocol = { path = "../toku_protocol", version = "0.2.0" }
tokio = { version = "0.2", features = ["rt-core", "tcp", "time", "stream"] }
futures = "0.3"
tokio-util = { version = "0.2", features = ["codec"]}
backoff = "0.1.2"
bytesize = "1.0.0"
